--- a/config
+++ b/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -154,7 +154,9 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec i3-msg exit
+
+bindsym $mod+Shift+f exec firefox
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -188,3 +190,14 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+exec feh --bg-fill ~/.config/i3/wallpaper.jpg
+# gaps inner 15
+# gaps outer 15
+for_window [class="^.*"] border pixel 1
+
+client.focused #333333 #5f676a #ffffff #484e50 #5f676a 
+client.focused_inactive #000000 #000000 #ffffff #000000 #000000 
+client.unfocused #333333 #222222 #888888 #292d2e #222222 
+client.urgent #2f343a #900000 #ffffff #900000 #900000 
+client.placeholder #000000 #0c0c0c #ffffff #000000 #0c0c0c 
+client.background #ffffff
